--- a/index_pc.html
+++ b/index_pc.html
@@ -218,8 +218,8 @@
 		  <hr style=" height:2px;border:none;border-top:2px dotted #185598;" />
           <p><strong>DIY版(自建实验环境)实验资源：</strong></p>
           <li>第3版实验手册(DIY版3.2)<a href="resource/无线网络技术教程(第3版)实验手册20170805.pdf"><u>下载</u></a>；</li>
-          <li>第3版实验虚拟镜像文件(DIY版3.2)<span><a href="https://pan.baidu.com/s/1n3tR8zp7WNzV3UXK5zSHLw "><u>百度网盘</u></a></span> (提取密码：ece7)；</li>
-          <li>第3版实验安装包和源代码(DIY版3.2)<a href="resource/无线网络技术教程(第3版)实验安装包和源代码20170318.rar"><u>下载</u></a>；</li>
+          <li>第3版实验虚拟镜像文件(DIY版3.2)<span><a href="https://pan.baidu.com/s/1n3tR8zp7WNzV3UXK5zSHLw "><u>百度网盘</u></a></span> (提取码：ece7)；</li>
+          <li>第3版实验安装包和源代码(DIY版3.2)<span><a href="https://pan.baidu.com/s/111azfOSzQMXHRS0Q7TdHGw"><u>百度网盘</u></a></span>(提取码：m633 )；</li>
           <li>第3版实验动画(DIY版3.2)<a href="resource/无线网络技术教程(第3版)实验动画20170318.rar"><u>下载</u></a>；</li>
 				</ul>
 					<p style="text-indent:2em; text-align:justify;line-height:140%;word-break:break-all;">以上网址如有变化，我们将会在出版社网站上及时更新通知，也请在本网站上查看。</p>
