--- a/resource/college_list.html
+++ b/resource/college_list.html
@@ -43,42 +43,42 @@
     <p style="text-align:center"><strong><font size=4>清华大学出版社, 2017.</font></strong></p>
    <div style="text-align:center">
              <img src="../images/map.jpg"  width="350" height="250">
-             	<p style="line-height:140%;margin-bottom:2px;word-break:break-all;"><CENTER>截止2018.1，已被200余所高校选为教学用书</CENTER></p>
+             	<p style="line-height:140%;margin-bottom:2px;word-break:break-all;"><CENTER>截止2019.5，已被200余所高校选为教学用书</CENTER></p>
     </div>
 
     <p style="text-indent:2em; text-align:justify;line-height:140%;margin-bottom:2px;word-break:break-all;">按省份及学校首字母排序</p>
 
-    <p style="text-indent:2em;text-align:justify;word-break:break-all;">安徽：安徽科技学院、安徽新华学院、巢湖学院、滁州学院、凤阳科技学校、合肥安财职业技术学院</p>
+    <p style="text-indent:2em;text-align:justify;word-break:break-all;">安徽：安徽财贸职业技术学院、安徽科技学院、安徽新华学院、巢湖学院、滁州学院、凤阳科技学校</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">北京：北京财贸职业学院、北京工业大学、北京建筑大学、北京联合大学、北京林业大学、北京师范大学、北京信息科技大学、首都师范大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">重庆：长江师范学院、重庆大学、重庆邮电大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">福建：福建农林大学、福建师范大学、福建师范大学协和学院、福建信息职业技术学院、华侨大学、集美大学、泉州师范学院、厦门大学嘉庚学院、厦门东方学院、厦门软件职业技术学院、阳光学院、漳州城市职业学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">甘肃：定西师范高等专科学校、兰州城市学院、兰州职业技术学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">广东：广东白云学院、广东东软学院、广东海洋大学寸金学院、广东华商技工学校、广东技术师范学院、广东科技学院、广东理工职业学院、广东职业技术学院、广州大学、广州商学院、华南理工大学、华南农业大学、惠州学院、惠州城市职业学院、吉林大学珠海学院、清远职业技术学院、深圳大学、肇庆学院、中山火炬职业技术学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">重庆：长江师范学院、重庆大学、重庆邮电大学、重庆水利电力职业技术学院、重庆文理学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">福建：福建农林大学、福建师范大学、福建师范大学协和学院、福建信息职业技术学院、华侨大学、集美大学、泉州师范学院、莆田学院、厦门大学嘉庚学院、厦门东方学院、厦门软件职业技术学院、阳光学院、漳州城市职业学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">甘肃：定西师范高等专科学校、兰州城市学院、兰州工业学院、兰州职业技术学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">广东：广东白云学院、广东东软学院、广东交通职技术学院、广东海洋大学寸金学院、广东华商技工学校、广东技术师范学院、广东科技学院、广东理工职业学院、广东职业技术学院、广州大学、广州商学院、华南理工大学、华南农业大学、惠州学院、惠州城市职业学院、吉林大学珠海学院、清远职业技术学院、深圳大学、肇庆学院、中山火炬职业技术学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">广西：百色学院、广西大学、广西科技大学、广西科技师范学院、广西农业职业技术学院、广西师范大学、桂林电子科技大学、桂林电子科技大学职业技术学院、桂林理工大学博文管理学院、梧州学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">贵州：贵阳学院、贵州财经大学、贵州大学、贵州工商职业学院、贵州民族大学、黔南民族师范学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">贵州：贵阳学院、贵州财经大学、贵州大学、贵州工商职业学院、贵州民族大学、黔南民族师范学院、遵义师范学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">海南：三亚学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">黑龙江：哈尔滨学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">河北：承德石油高等专科学校、河北地质大学、河北师范大学、廊坊师范学院、廊坊职业技术学院、石家庄经济职业学院、石家庄外经贸职业学院、石家庄邮电职业技术学院、邢台技术职业学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">河南：安阳师范学院、河南大学、河南工学院、河南交通职业技术学院、河南经贸职业学院、河南艺术职业学院、黄河交通学院、南阳医学高等专科学校、平顶山学院、信阳农林学院、信阳师范学院、郑州电子技术学院、周口师范学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">黑龙江：哈尔滨学院、哈尔滨金融学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">河北：承德石油高等专科学校、河北北方学院、河北地质大学、河北师范大学、河北外国语学院、廊坊师范学院、廊坊职业技术学院、石家庄经济职业学院、石家庄外经贸职业学院、石家庄邮电职业技术学院、邢台技术职业学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">河南：安阳师范学院、河南大学、河南省广播电视大学、河南工学院、河南交通职业技术学院、河南经贸职业学院、河南艺术职业学院、黄河交通学院、南阳医学高等专科学校、平顶山学院、商丘师范学院、信阳农林学院、信阳师范学院、郑州电子技术学院、周口师范学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">湖北：湖北民族学院、湖北三峡职业技术学院、华中科技大学、黄冈师范学院、武汉城市职业学院、武汉大学、武汉华夏理工学院、武汉科技大学、武汉轻工大学、武汉职业技术学院、中南财经政法大学、中南民族大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">湖南：国防科技大学、衡阳技师学院、衡阳师范学院、湖南郴州工业交通学校、湖南城市学院、湖南大学、湖南工学院、湖南工业大学、湖南工业职业技术学院、湖南交通工程学院、湖南科技大学、湖南科技学院、湖南科技职业学院、湖南理工学院、湖南人文科技学院、湖南信息学院、吉首大学、邵阳学院、中南大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">吉林：东北师范大学、吉林农业科技学院、延边大学、长春建筑学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">江苏：常州大学、常州工程职业技术学院、常州广播电视大学、常州轻工职业技术学院、江苏大学、江苏建康职业学院、江苏经贸职业技术学院、江苏理工学院、金陵科技学院、淮阴工学院、南京工程学院、南京机电职业技术学院、南京审计大学、南师大中北学院、南京信息工程大学、南通大学、三江学院、苏州大学文正学院、苏州健雄职业技术学院、苏州科技大学、太湖学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">江西：东华理工大学、东华理工大学长江学院、江西财经职业学院、江西警察学院、江西科技师范大学、江西理工大学、江西理工大学应用科学学院、江西先锋软件职业技术学院、华东交通大学理工学院、南昌大学、南昌理工学院、宜春学院、新余学院</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">辽宁：大连东软信息学院、辽东学院、辽宁工程技术大学、辽宁工业大学、辽宁省交通高等专科学校、沈阳工学院、沈阳科技学院、沈阳科技学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">湖南：国防科技大学、衡阳技师学院、衡阳师范学院、湖南郴州工业交通学校、湖南城市学院、湖南大学、湖南工学院、湖南工业大学、湖南工业职业技术学院、湖南交通工程学院、湖南科技大学、湖南科技学院、湖南科技职业学院、湖南理工学院、湖南人文科技学院、湖南信息职业技术学院、吉首大学、邵阳学院、中南大学</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">吉林：东北师范大学、吉林工商学院、吉林农业科技学院、延边大学、长春建筑学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">江苏：常州大学、常州工程职业技术学院、常州广播电视大学、常州轻工职业技术学院、江苏大学、江苏警官学院、江苏建康职业学院、江苏经贸职业技术学院、江苏理工学院、金陵科技学院、淮海工学院、淮阴工学院、南京工程学院、南京机电职业技术学院、南京审计大学、南师大中北学院、南京信息工程大学、南京邮电大学、南通大学、三江学院、苏州大学文正学院、苏州经贸职业技术学院、苏州健雄职业技术学院、苏州科技大学、无锡太湖学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">江西：东华理工大学、东华理工大学长江学院、华东交通大学理工学院、江西财经职业学院、江西警察学院、江西科技师范大学、江西理工大学、江西理工大学应用科学学院、江西先锋软件职业技术学院、九江学院、南昌大学、南昌理工学院、宜春学院、新余学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">辽宁：大连东软信息学院、辽东学院、辽宁工程技术大学、辽宁工业大学、辽宁省交通高等专科学校、沈阳工程学院、沈阳工学院、沈阳科技学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">内蒙古：包头职业技术学院、内蒙古大学、内蒙古工业大学、内蒙古民族大学、内蒙古师范大学</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">宁夏：宁夏理工学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">青海：青海交通职业技术学院、青海民族大学</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">山东：德州学院、菏泽学院、济南大学、济宁职业技术学院、聊城大学、齐鲁师范学院、山东华宇工学院、山东建筑大学、山东科技大学、山东力明科技职业学院、山东协和学院、烟台大学、枣庄学院、中国石油大学(华东)</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">山西：大同大学、太原工业学院、忻州师范学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">山西：大同大学、太原工业学院、山西机电职业技术学院、忻州师范学院</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">陕西：汉中职业技术学院、陕西工业职业技术学院、渭南师范学院、西安工业大学、西安欧亚学院、西安邮电大学、长安大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">上海：上海电机学院、上海第二工业大学、上海经济管理学校、上海师范大学、上海商学院、上海应用技术大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">四川：成都东软学院、成都技师学院、成都理工大学、成都师范学院、成都文理学院、成都信息工程大学、江油市职业中学校、绵阳师范学院、四川大学、四川长江职业学院、四川电大、四川工商职业技术学院、四川化工职业技术学院、四川交通职业技术学院、四川师范大学、四川农业大学、四川天一学院、四川现代职业学院 、西华师范大学、西南石油大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">天津：南开大学</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">上海：上海电机学院、上海电力学院、上海第二工业大学、上海经济管理学校、上海立达职业技术学院、上海师范大学、上海商学院、上海应用技术大学</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">四川：成都东软学院、成都技师学院、成都理工大学、成都师范学院、成都文理学院、成都信息工程大学、电子科技大学成都学院、江油市职业中学校、绵阳师范学院、四川大学、四川长江职业学院、四川电大、四川工商职业技术学院、四川化工职业技术学院、四川交通职业技术学院、四川师范大学、四川农业大学、四川天一学院、四川现代职业学院、四川信息职业技术学院、西华大学、西华师范大学、西南民族大学、西南石油大学</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">天津：南开大学、天津商业大学、天津职业技术师范大学</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">西藏：西藏民族大学</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">新疆：昌吉学院、喀什大学</p>
 	<p style="text-indent:2em;text-align:justify;word-break:break-all;">云南：楚雄师范学院、昆明理工大学、云南工商学院、云南科技信息职业学院、云南师范大学</p>
-	<p style="text-indent:2em;text-align:justify;word-break:break-all;">浙江：嘉兴技师学院、嘉兴学院、丽水学院、宁波大学、宁波大学科技学院、宁波工程学院、绍兴文理学院元培学院、桐庐职技院、温州科技职业学院、浙江大学、浙江工业大学、浙江万里学院</p>
+	<p style="text-indent:2em;text-align:justify;word-break:break-all;">浙江：嘉兴技师学院、嘉兴学院、丽水学院、宁波大学、宁波大学科技学院、宁波工程学院、绍兴文理学院元培学院、桐庐职技院、温州科技职业学院、浙江大学、浙江工业大学、浙江外国语学院、浙江万里学院</p>
     
     <!--div class="container">
       <p class="text-muted">
