--- a/index_pc.html
+++ b/index_pc.html
@@ -130,7 +130,7 @@
             		</div-->
           		</div>
         	</div>
-        	<p style="text-align:right;line-height:140%;margin-bottom:2px;word-break:break-all;"><strong>在线购买</strong>: <a href="https://www.amazon.cn/%E9%AB%98%E7%AD%89%E9%99%A2%E6%A0%A1%E4%BF%A1%E6%81%AF%E6%8A%80%E6%9C%AF%E8%A7%84%E5%88%92%E6%95%99%E6%9D%90-%E6%97%A0%E7%BA%BF%E7%BD%91%E7%BB%9C%E6%8A%80%E6%9C%AF%E6%95%99%E7%A8%8B-%E5%8E%9F%E7%90%86%E5%BA%94%E7%94%A8%E4%B8%8E%E5%AE%9E%E9%AA%8C-%E9%87%91%E5%85%89/dp/B06XNMJNMQ/ref=sr_1_5?s=books&ie=UTF8&qid=1494313823&sr=1-5&keywords=%E6%97%A0%E7%BA%BF%E7%BD%91%E7%BB%9C%E6%8A%80%E6%9C%AF%E6%95%99%E7%A8%8B"><u>亚马逊</u></a>; <a href="http://product.dangdang.com/24216222.html"><u>当当网</u></a>; <a href="https://item.jd.com/12151164.html"><u>京东商城</u></a>; <a href="https://detail.tmall.com/item.htm?spm=a230r.1.14.35.PLW1OZ&id=547239830541&ns=1&abbucket=1"><u>天猫商城</u></a>;  </p>
+        	<p style="text-align:right;line-height:140%;margin-bottom:2px;word-break:break-all;"><CENTER><strong>在线购买</strong>: <a href="https://www.amazon.cn/%E9%AB%98%E7%AD%89%E9%99%A2%E6%A0%A1%E4%BF%A1%E6%81%AF%E6%8A%80%E6%9C%AF%E8%A7%84%E5%88%92%E6%95%99%E6%9D%90-%E6%97%A0%E7%BA%BF%E7%BD%91%E7%BB%9C%E6%8A%80%E6%9C%AF%E6%95%99%E7%A8%8B-%E5%8E%9F%E7%90%86%E5%BA%94%E7%94%A8%E4%B8%8E%E5%AE%9E%E9%AA%8C-%E9%87%91%E5%85%89/dp/B06XNMJNMQ/ref=sr_1_5?s=books&ie=UTF8&qid=1494313823&sr=1-5&keywords=%E6%97%A0%E7%BA%BF%E7%BD%91%E7%BB%9C%E6%8A%80%E6%9C%AF%E6%95%99%E7%A8%8B"><u>亚马逊</u></a>; <a href="http://product.dangdang.com/24216222.html"><u>当当网</u></a>; <a href="https://item.jd.com/12151164.html"><u>京东商城</u></a>; <a href="https://detail.tmall.com/item.htm?spm=a230r.1.14.35.PLW1OZ&id=547239830541&ns=1&abbucket=1"><u>天猫商城</u></a>;  </CENTER></p>
       	</div>
 
       <hr>
